<resources>
    <string name="app_name">drkbinary</string>
    <string name="action_about">About…</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">drkBinary</string>
    <string name="placeholder">\?</string>
    <string name="result_placeholder">result</string>
    <string name="validate">Validate</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_text">drkBinary simple game</string>
    <string name="about_fragment_lable">About drkBinary</string>
    <string name="drkbugs_logo">drkbugs logo</string>
    <string name="drk_url">https://drk.com.ar</string>
    <string name="version">v0.10</string>
</resources>